--- a/src/App.css
+++ b/src/App.css
@@ -592,17 +592,18 @@ header nav .profile .avatarLabel:hover:before {
   transition: 0.2s ease all;
 }
 header nav .footer {
-  width: 100%;
-  height: 5rem;
-  position: absolute;
-  bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+   
+    font-size: 3.7rem;
+    position: absolute;
+    bottom: 2rem;
 }
 header nav .footer button {
-  width: 100%;
-  height: 100%;
+  width: 92%;
+  height: 5rem;
   font-size: 1.7rem;
   background-color: var(--navSecColor);
   border: none;
