--- a/src/mediaquery.css
+++ b/src/mediaquery.css
@@ -10,7 +10,7 @@
     z-index: 999;
     border: none;
     transition: 0.3s cubic-bezier(0.1, 0.07, 0.2, 1.1);
-    left: -70rem;
+    left: -100%;
     margin: 0;
     padding: 1rem;
     backdrop-filter: blur(1rem);
@@ -315,6 +315,14 @@ header nav .theme h1 {
     padding: 2rem;
     width: 90%;
     margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .editNote .editNoteCard form button:hover{
+    background-color: var(--color);
+    color: #000;
+    border: .1rem solid var(--color);
   }
   .fileUploadData {
     height: 16rem;
@@ -341,10 +349,11 @@ header nav .theme h1 {
   .homeContainer .overview .grid-overview-section .totalnotes,
   .totalPhotos {
     width: 100%;
+    /* height: 100%; */
   }
   .homeContainer .recentActivities {
     margin-top: 0;
-    height: 30rem;
+    height: 35rem;
     width: 99%;
   }
   .homeContainer .recentActivities .activities {
@@ -354,7 +363,7 @@ header nav .theme h1 {
   }
   .homeContainer .recentActivities .activities p{
     font-size: 2rem;
-    margin: 0;
+    margin: 1rem 0 0 0;
   }
   .homeContainer .recentActivities .activities p span {
     font-size: 1.5rem;
@@ -362,7 +371,7 @@ header nav .theme h1 {
   .homeContainer .intro {
     margin-top: 2rem;
     width: 99%;
-    height: 18%;
+    height: 18rem;
     /* background: rebeccapurple; */
     border-bottom: .1rem solid rgba(255,255,255,0.3);
   }
@@ -388,9 +397,12 @@ header nav .theme h1 {
   border: 0.1rem solid var(--color);
   color: #000;
 }
+.homeContainer .overview .grid-overview-section .totalnotes .totalNotes h4, .totalPhotos h4 {
+    font-size: 2rem;
 }
-@media screen and (max-width: 480px) {
+}
+/* @media screen and (max-width: 480px) {
   html {
     font-size: 40%;
   }
-}
+} */
