changes in media wuery

--- a/src/mediaquery.css
+++ b/src/mediaquery.css
@@ -286,7 +286,7 @@ header nav .theme h1 {
     display: none;
   }
   header nav .theme {
-    top: 81%;
+    top: 80rem;
     width: 88%;
     height: 8rem;
   }
