--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   --hoverColorNav: #ff5182;
   --navColorHover: #1c4966;
   --mainBgColor: #0e2433;
-  --color:#9562ff;
+  --color: #9562ff;
 }
 .darkMode {
   --text-color: #fff;
@@ -23,8 +23,8 @@
   --navSecColor: rgba(255, 255, 255, 0.2);
   --hoverColorNav: #5ac3b0;
   --navColorHover: #5ac3b042;
-  --mainBgColor: linear-gradient(45deg,#6155D4,#5B97F2);
-  --color:#ffc107;
+  --mainBgColor: linear-gradient(45deg, #6155d4, #5b97f2);
+  --color: #ffc107;
 }
 html {
   font-size: 62.5%;
@@ -32,6 +32,11 @@ html {
 }
 body {
   background: var(--mainBgColor);
+  overflow-y: scroll;
+}
+#root {
+  height: 100vh;
+  width: 100%;
 }
 /* For Home screen  */
 .home {
@@ -339,7 +344,7 @@ body {
   position: absolute;
   top: 2rem;
   right: 10rem;
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   font-family: "Varela Round", sans-serif;
   color: #5ac3b0;
 }
@@ -347,7 +352,7 @@ body {
   height: 20%;
   position: absolute;
   left: 50%;
-  top: 85%;
+  top: 87%;
   padding: 1rem;
   transform: translate(-50%, -50%);
   width: 100%;
@@ -454,32 +459,32 @@ header {
   padding: 1rem;
   width: 100%;
   height: 100%;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-size: 2rem;
   flex-direction: column;
   overflow-y: scroll;
 }
-.homeContainer .recentActivities .activities h5{
+.homeContainer .recentActivities .activities h5 {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.homeContainer .recentActivities .activities p{
+.homeContainer .recentActivities .activities p {
   padding: 1rem;
   width: 100%;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: var(--navSecColor);
   height: auto;
   font-size: 1.5rem;
   font-weight: 400;
-  margin: .5rem;
+  margin: 0.5rem;
   opacity: 0.8;
 }
-.homeContainer .recentActivities .activities p span{
-  color:#445;
-  margin-top: .5rem;
+.homeContainer .recentActivities .activities p span {
+  color: #445;
+  margin-top: 0.5rem;
   font-size: 1rem;
 }
 .homeContainer .overview .grid-overview-section {
@@ -553,7 +558,7 @@ header nav .profile .description p {
   font-weight: 400;
   position: absolute;
   width: 100%;
-    /* background: red; */
+  /* background: red; */
   text-transform: capitalize;
 }
 header nav .profile .avatar {
@@ -596,10 +601,10 @@ header nav .footer {
   justify-content: center;
   align-items: center;
   width: 100%;
-   
-    font-size: 3.7rem;
-    position: absolute;
-    bottom: 2rem;
+
+  font-size: 3.7rem;
+  position: absolute;
+  bottom: 2rem;
 }
 header nav .footer button {
   width: 92%;
@@ -711,15 +716,38 @@ header nav ul li a:hover {
   background-color: var(--navColorHover);
   color: #fff;
 }
-.openMenu{
+header nav ul li .deleteId:hover {
+  background-color: transparent;
+}
+header nav ul li .deleteId:hover:before {
+  content: "";
+  height: 100%;
+  width: 50%;
+  background-color: #e10600;
+  position: absolute;
+  border-radius: 0 5rem 5rem 0;
+  left: -47%;
+  transition: 0.2s ease;
+}
+header nav ul li .deleteId:hover:after {
+  content: "";
+  height: 1rem;
+  width: 1rem;
+  background-color: #e10600;
+  position: absolute;
+  right: -0.5rem;
+  border-radius: 1rem;
+  transition: 0.2s ease;
+}
+.openMenu {
   display: none;
 }
-.logoMain{
+.logoMain {
   display: none;
 }
- .close{
-   display: none;
-  }
+.close {
+  display: none;
+}
 header nav ul li a i {
   margin-right: 2rem;
   margin-left: 2rem;
@@ -849,7 +877,7 @@ header nav ul li a i {
   font-weight: 400;
   transition: 0.2s ease;
 }
-.notesTwo .cards p{
+.notesTwo .cards p {
   font-weight: 400;
   font-size: 1.2rem;
 }
@@ -872,13 +900,11 @@ header nav ul li a i {
   transition: 0.3s ease;
 }
 .cards .btns .delete {
-  background-color: #911f21
-  ;
+  background-color: #911f21;
 }
 .cards .btns .delete:hover {
   background-color: transparent;
-  color: #911f21
-  ;
+  color: #911f21;
   border: 0.1rem solid #911f21;
 }
 .cards .btns .edit {
@@ -889,13 +915,13 @@ header nav ul li a i {
   color: var(--color);
   border: 0.1rem solid var(--color);
 }
-.cards .btns .down{
-  background-color: 	#32CD32;
+.cards .btns .down {
+  background-color: #32cd32;
 }
-.cards .btns .down:hover{
+.cards .btns .down:hover {
   background-color: transparent;
-  color: #32CD32;
-  border: 0.1rem solid #32CD32;
+  color: #32cd32;
+  border: 0.1rem solid #32cd32;
 }
 .header {
   margin-bottom: 2rem;
@@ -933,7 +959,7 @@ header nav ul li a i {
   text-transform: capitalize;
   font-size: 1.8rem;
   color: var(--color);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   font-weight: 400;
 }
 
@@ -1069,9 +1095,9 @@ header nav ul li a i {
   width: 40%;
   color: #fff;
   transition: 0.2s ease;
-  box-shadow: -1px 0px 36px -8px rgba(0,0,0,1);
-  -webkit-box-shadow: -1px 0px 36px -8px rgba(0,0,0,1);
-  -moz-box-shadow: -1px 0px 36px -8px rgba(0,0,0,1);
+  box-shadow: -1px 0px 36px -8px rgba(0, 0, 0, 1);
+  -webkit-box-shadow: -1px 0px 36px -8px rgba(0, 0, 0, 1);
+  -moz-box-shadow: -1px 0px 36px -8px rgba(0, 0, 0, 1);
 }
 .addnoteContainer .addnoteonclick h4 {
   width: 100%;
@@ -1107,7 +1133,6 @@ header nav ul li a i {
   font-size: 2rem;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
-
 }
 .addnoteContainer .addnoteonclick form button {
   padding: 1.5rem;
@@ -1119,8 +1144,8 @@ header nav ul li a i {
   border: 0.1rem solid var(--color);
   color: #fff;
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
 }
 .addnoteContainer .addnoteonclick form button:hover {
@@ -1196,7 +1221,7 @@ header nav ul li a i {
 .recentImage {
   color: #fff;
   width: 100%;
-  background:var(--navBgColor);
+  background: var(--navBgColor);
   height: 30rem;
   position: relative;
   border-radius: 0.5rem;
@@ -1216,11 +1241,11 @@ header nav ul li a i {
   padding: 0.5rem;
   height: rem;
   border: none;
-  bottom: .5rem;
-  right: .5rem;
+  bottom: 0.5rem;
+  right: 0.5rem;
   cursor: pointer;
   background-color: transparent;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   color: #fff;
   opacity: 0.7;
 }
@@ -1240,7 +1265,8 @@ header nav ul li a i {
   color: var(--text-color);
   font-weight: 400;
 }
-.homeContainer .overview .grid-overview-section .totalnotes .totalNotes, .totalPhotos .totalphoto{
+.homeContainer .overview .grid-overview-section .totalnotes .totalNotes,
+.totalPhotos .totalphoto {
   position: relative;
   width: 80%;
   height: 100%;
@@ -1249,33 +1275,37 @@ header nav ul li a i {
   justify-content: center;
   align-items: center;
 }
-.homeContainer .overview .grid-overview-section .totalnotes .totalNotes h4, .totalPhotos h4{
-   font-weight: 400;
-   /* background-color: red; */
-   color: var(--color);
-   border-bottom: .1rem solid rgba(255, 255, 255, 0.2);
-   padding:0rem 0 1rem 1rem  ;
-   width: 100%;
-   font-size: 1.5rem;
-   position: absolute;
-   top: 1rem;
-   /* left: 1rem; */
+.homeContainer .overview .grid-overview-section .totalnotes .totalNotes h4,
+.totalPhotos h4 {
+  font-weight: 400;
+  /* background-color: red; */
+  color: var(--color);
+  border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+  padding: 0rem 0 1rem 1rem;
+  width: 100%;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 1rem;
+  /* left: 1rem; */
 }
-.homeContainer .overview .grid-overview-section .totalnotes .totalNotes p, .totalPhotos p{
+.homeContainer .overview .grid-overview-section .totalnotes .totalNotes p,
+.totalPhotos p {
   font-size: 3rem;
   font-weight: 400;
   position: relative;
   top: 1.5rem;
 }
-.homeContainer .overview .grid-overview-section .totalnotes .addMore, .totalPhotos .addMore{
-  border-left: .1rem solid rgba(255, 255, 255, 0.2);
+.homeContainer .overview .grid-overview-section .totalnotes .addMore,
+.totalPhotos .addMore {
+  border-left: 0.1rem solid rgba(255, 255, 255, 0.2);
   width: 20%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.homeContainer .overview .grid-overview-section .totalnotes .addMore button, .totalPhotos .addMore button{
+.homeContainer .overview .grid-overview-section .totalnotes .addMore button,
+.totalPhotos .addMore button {
   /* padding: 1rem; */
   border: none;
   background-color: transparent;
@@ -1284,7 +1314,7 @@ header nav ul li a i {
   cursor: pointer;
 }
 
-.editNote{
+.editNote {
   background-color: rgba(255, 255, 255, 0.3);
   height: 100vh;
   width: 100%;
@@ -1292,7 +1322,7 @@ header nav ul li a i {
   z-index: 9999;
   display: none;
 }
-.editNote .editNoteCard{
+.editNote .editNoteCard {
   position: relative;
   top: 50%;
   left: 50%;
@@ -1303,7 +1333,7 @@ header nav ul li a i {
   border-radius: 1rem;
   color: var(--text-color);
 }
-.editNote .editNoteCard h1{
+.editNote .editNoteCard h1 {
   width: 100%;
   height: 12%;
   padding-top: 2rem;
@@ -1311,14 +1341,14 @@ header nav ul li a i {
   font-weight: 400;
   text-align: center;
 }
-.editNote .editNoteCard h1 span{
+.editNote .editNoteCard h1 span {
   position: absolute;
   right: 2rem;
   top: 1rem;
   font-size: 3rem;
   cursor: pointer;
 }
-.editNote .editNoteCard form{
+.editNote .editNoteCard form {
   height: 80%;
   width: 100%;
   display: flex;
@@ -1326,39 +1356,294 @@ header nav ul li a i {
   justify-content: center;
   align-items: center;
 }
-.editNote .editNoteCard form label{
+.editNote .editNoteCard form label {
   font-size: 2rem;
   width: 80%;
-  margin: 1rem 0 .5rem 0;
+  margin: 1rem 0 0.5rem 0;
   font-weight: 400;
 }
-.editNote .editNoteCard form input{
+.editNote .editNoteCard form input {
   padding: 1rem;
   width: 80%;
   border: none;
   outline: none;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
-.editNote .editNoteCard form textarea{
+.editNote .editNoteCard form textarea {
   padding: 1rem;
   width: 80%;
   height: 10rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   outline: none;
   border: none;
 }
-.editNote .editNoteCard form button{
-    padding: 1rem;
-    width: 80%;
-    margin-top: 2rem;
-    border-radius: .5rem;
-    border: .1rem solid var(--color);
-    background-color: var(--color);
-    cursor: pointer;
-    transition: 0.3s ease;
+.editNote .editNoteCard form button {
+  padding: 1rem;
+  width: 80%;
+  margin-top: 2rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid var(--color);
+  background-color: var(--color);
+  cursor: pointer;
+  transition: 0.3s ease;
 }
-.editNote .editNoteCard form button:hover{
+.editNote .editNoteCard form button:hover {
   background-color: transparent;
   color: var(--color);
-  border: .1rem solid var(--color);
+  border: 0.1rem solid var(--color);
+}
+.login .flex-display-login .item-two-login .dontHaveAnAccount .signup-btn {
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  background-color: #9562ff;
+  margin: 0;
+}
+.login
+  .flex-display-login
+  .item-two-login
+  .dontHaveAnAccount
+  .signup-btn:hover {
+  background-color: transparent;
+  border: 0.1rem solid #9562ff;
+  color: #9562ff;
+}
+.login .flex-display-login .item-two-login .forgetPassword {
+  text-decoration: none;
+  width: 85%;
+  font-size: 1.1rem;
+  margin-top: 0.7rem;
+  color: #f7cd46;
+  font-weight: 400;
+}
+.login .flex-display-login .item-two-login .forgetPassword:hover {
+  text-decoration: underline;
+}
+.fo-pw {
+  background-color: #000;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.forget-pw-card {
+  background-color: #101010;
+  border: 0.2rem solid #00cec9;
+  height: 50%;
+  width: 45%;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  padding: 1rem;
+}
+.forget-pw-card h1 {
+  font-size: 3rem;
+  font-weight: 500;
+  position: absolute;
+  top: 2rem;
+  /* left: 2rem; */
+  /* background-color: red; */
+  color: #00cec9;
+  text-transform: capitalize;
+  width: 100%;
+  text-align: center;
+  padding-bottom: 1rem;
+  border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+}
+.forget-pw-card h5 {
+  font-size: 1.4rem;
+  font-weight: 300;
+  position: absolute;
+  top: 9.5rem;
+  /* left: 2rem; */
+  /* background-color: red; */
+  width: 100%;
+  padding: 0 2rem 0 2rem;
+  color: #fff;
+}
+.forget-pw-card p {
+  width: 93%;
+  font-weight: 400;
+  color: #ff0028;
+  position: relative;
+  top: 3.8rem;
+}
+.forget-pw-card input {
+  width: 93%;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  outline: none;
+  border: none;
+  position: relative;
+  top: 3.5rem;
+  border: 0.1rem solid #00cec9;
+  /* animation: ; */
+}
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.5rem;
+  }
+  75% {
+    margin-left: -0.5rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
+}
+.forget-pw-card button {
+  width: 10rem;
+  height: 4rem;
+  padding: 1rem;
+  margin-left: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.forget-pw-card a {
+  text-decoration: none;
+}
+.forget-pw-card .bt-fp {
+  position: absolute;
+  bottom: 3rem;
+  right: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.success {
+  position: absolute;
+  height: 18rem;
+  top: 1rem;
+  border-radius: 50%;
+}
+.forget-pw-card h2 {
+  font-size: 3.5rem;
+  color: #00ff00;
+  z-index: 99;
+  font-weight: 400;
+  position: relative;
+  top: 2rem;
+}
+.forget-pw-card h6 {
+  font-size: 2rem;
+  /* margin-top: 3rem; */
+  position: relative;
+  top: 3rem;
+  font-weight: 400;
+  color: #fff;
+}
+.forget-pw-card .btnLogin {
+  position: absolute;
+  bottom: 5rem;
+  width: 50%;
+  transition: 0.3s ease;
+}
+.forget-pw-card .btnLogin:hover {
+  background-color: transparent;
+  border: 0.1rem solid #fff;
+  color: #fff;
+}
+.success-card {
+  height: 60%;
+  border: 0.2rem solid #00ff00;
+}
+.DeleteAccount {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  /* background-color: rgba(255, 255, 255, 0.3); */
+  background-image: linear-gradient(135deg, #97abff 10%, #123597 100%);
+  backdrop-filter: blur(0.5rem);
+  z-index: 99999;
+}
+.DeleteAccount .deleteAccCard {
+  color: #fff;
+  padding: 1rem;
+  height: 50%;
+  width: 50%;
+  background-color: #0e2433;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 1px 2px 23px 0px rgba(0, 0, 0, 0.66);
+  -webkit-box-shadow: 1px 2px 23px 0px rgba(0, 0, 0, 0.66);
+  -moz-box-shadow: 1px 2px 23px 0px rgba(0, 0, 0, 0.66);
+}
+.DeleteAccount .deleteAccCard h3 {
+  font-size: 3rem;
+  width: 100%;
+  position: absolute;
+  top: 1rem;
+  left: 0;
+  padding: 0 0 0 2rem;
+  border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+  /* background: blueviolet; */
+  font-weight: 400;
+}
+.DeleteAccount .deleteAccCard p {
+  width: 95%;
+  position: relative;
+  top: -2.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+.DeleteAccount .deleteAccCard h6{
+  position: absolute;
+    top: 18.5rem;
+    font-weight: 400;
+    font-size: 1rem;
+    /* left: 2rem; */
+    width: 91%;
+    color: #E10600;
+}
+.DeleteAccount .deleteAccCard input {
+  width: 95%;
+  padding: 1.7rem;
+  margin: 2rem 0;
+  outline: none;
+  border: none;
+  border-radius: 0.5rem;
+  position: relative;
+  top: -2rem;
+}
+.DeleteAccount .deleteAccCard .btns-deletion {
+  position: absolute;
+  border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
+  bottom: 2rem;
+  width: 100%;
+  padding: 2rem 2rem 0 0;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+.DeleteAccount .deleteAccCard .btns-deletion button {
+  padding: 1rem;
+  width: 30%;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.7rem;
+  cursor: pointer;
 }
