--- a/src/mediaquery.css
+++ b/src/mediaquery.css
@@ -4,66 +4,97 @@
     overflow: hidden;
   }
   header nav {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 999;
+    z-index: 9999;
     border: none;
     transition: 0.3s cubic-bezier(0.1, 0.07, 0.2, 1.1);
-    left: -100%;
+    bottom: -100%;
     margin: 0;
     padding: 1rem;
     backdrop-filter: blur(1rem);
   }
+  header nav .navContainer{
+    height: 100%;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-y: scroll;
+  }
   .openMenu {
     font-size: 5rem;
-    position: absolute;
-    top: 2rem;
-    right: 4rem;
+    /* position: absolute; */
+    /* top: 2rem; */
+    /* right: 4rem; */
     display: block;
     z-index: 999;
   }
   .close {
-    position: absolute;
-    font-size: 5rem;
-    right: 4rem;
-    top: 5rem;
+    position: relative;
+    font-size: 3rem;
+    height: 100%;
+    width: 10%;
+    margin-left: 0;
+    right: 0;
+    top: 0;
     z-index: 9999;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .logoMain {
-    position: absolute;
+    /* position: absolute;
     top: 1rem;
-    left: 2rem;
-    height: 8rem;
+    left: 2rem; */
+    height: 6rem;
     display: block;
   }
   header nav .profile .description {
-    width: 52%;
-    display: block;
-    margin-left: 5rem;
+    /* background: red; */
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0;
+    margin: 1rem;
   }
   header nav .profile .description h1 {
-    top: 4rem;
-    font-size: 3rem;
+    top: 0;
+    font-size: 2.7rem;
+    position: relative;
   }
   header nav .profile .description p {
     font-size: 2rem;
-    top: 7.5rem;
+
+    top: 0;
+    position: relative;
   }
   header nav .footer {
     position: relative;
-    top: 23rem;
+    top: 0;
+    height: 10%;
+    position: relative;
+    margin-top: 3rem;
   }
   header nav .footer button {
-  width: 92%;
-    height: 8rem;
-    font-size: 3.7rem; 
+    width: 100%;
+    height: 100%;
+    font-size: 3.7rem;
   }
-
+  header nav .profile .avatarLabel {
+    height: 100%;
+    width: 30%;
+    background-color: transparent;
+  }
   .hidden {
     display: block;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 400;
   }
   .logout {
@@ -82,12 +113,12 @@
     font-size: 2.5rem;
   }
   .home .flex-display-home .home-item-One .authBtn button {
-    width: 15rem;
-    padding: 1.5rem;
-    font-size: 2.4rem;
+    width: 12rem;
+    padding: 1.2rem;
+    font-size: 2.2rem;
   }
   .home .flex-display-home .home-item-One .logo img {
-    height: 6rem;
+    height: 5.5rem;
   }
   .signup .flex-display-signup .item-one img,
   .login .flex-display-login .item-one img {
@@ -96,35 +127,38 @@
   .slider {
     height: 4rem;
     width: 8rem;
-    top: -0.5rem; 
-}
-.slider:before {
-  content: "";
-  position: absolute;
-  height: 2.7rem;
-  width: 2.7rem;
-  bottom: 16%;
-}
-input:checked + .slider:before {
-  transform: translateX(3.5rem);
-}
-header nav .theme h1 {
-  font-size: 2.5rem;
-}
+    top: -0.5rem;
+  }
+  .slider:before {
+    content: "";
+    position: absolute;
+    height: 2.7rem;
+    width: 2.7rem;
+    bottom: 16%;
+  }
+  input:checked + .slider:before {
+    transform: translateX(3.5rem);
+  }
+  header nav .theme h1 {
+    font-size: 2.5rem;
+  }
   .signup .flex-display-signup,
   .login .flex-display-login {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
   }
   .signupText,
   .LoginText {
     position: absolute;
-    font-size: 4rem;
+    font-size: 3.5rem;
+    height: 7rem;
+    border-bottom: .1rem solid rgba(255,255,255,0.2);
+    padding-left: 2rem;
     left: 0;
     right: 0;
-    top: 10rem;
+    top: 3rem;
     width: 100%;
     text-align: center;
   }
@@ -143,42 +177,56 @@ header nav .theme h1 {
   .signup .flex-display-signup .item-two-validation,
   .login .flex-display-login .item-two-login {
     width: 100%;
-    height: 60rem;
+    top: 5%;
+    height: 85%;
   }
   .signup .flex-display-signup .item-two-validation form label,
   .login .flex-display-login .item-two-login form label {
     font-size: 3rem;
     margin-top: 1.5rem;
+    width: 90%;
   }
   .signup .flex-display-signup .item-two-validation form input,
   .login .flex-display-login .item-two-login form input {
-    padding: 1.7rem;
+    padding: 1.5rem;
+    font-size: 1.7rem;
+    width: 90%;
+  }
+  .name_profession {
+    width: 90%;
   }
   .signup .flex-display-signup .item-two-validation form button,
   .login .flex-display-login .item-two-login form button {
     color: #000;
     margin-top: 2rem;
-    padding: 3.2rem;
-    width: 85%;
+    font-size: 2rem;
+    padding: 2.8rem;
+    width: 90%;
+  }
+  .login .flex-display-login .item-two-login .forgetPassword {
+    font-size: 1.5rem;
+    width: 90%;
   }
   .signup .flex-display-signup .item-two-validation form button:hover,
-.login .flex-display-login .item-two-login form button:hover {
-  border: 0.1rem solid #5ac3b0;
-  background-color: #5ac3b0;
-  color: #000;
-}
-  .signup .flex-display-signup .item-two-validation form p, .login .flex-display-login .item-two-login form p {
+  .login .flex-display-login .item-two-login form button:hover {
+    border: 0.1rem solid #5ac3b0;
+    background-color: #5ac3b0;
+    color: #000;
+  }
+  .signup .flex-display-signup .item-two-validation form p,
+  .login .flex-display-login .item-two-login form p {
     font-size: 1.4rem;
-}
-  .signup .flex-display-signup .item-two-validation form ,
+    width: 90%;
+  }
+  .signup .flex-display-signup .item-two-validation form,
   .login .flex-display-login .item-two-login form {
     position: relative;
-    top: 2rem;
+    top: 4rem;
   }
-  .signup .flex-display-signup .item-two-validation .alreadyHaveAnAccount,
-  .login .flex-display-login .item-two-login .dontHaveAnAccount {
-    font-size: 2rem;
-    margin-top: 3rem;
+  .signup .flex-display-signup .item-two-validation .alreadyHaveAnAccount {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    width: 90%;
   }
   .contactus a span i {
     height: 6rem;
@@ -189,22 +237,116 @@ header nav .theme h1 {
     font-size: 2rem;
   }
   .contactus {
-    top: 98%;
+    top: 27%;
+    position: relative;
+    border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
+    padding-top: 2rem;
+  }
+  .forget-pw-card {
+    height: 64%;
+    width: 98%;
+    border: none;
+  }
+  .forget-pw-card input {
+    width: 90%;
+    padding: 2rem;
+    font-size: 1.7rem;
+    top: 1.5rem;
+  }
+  .forget-pw-card h5 {
+    font-size: 1.7rem;
+    top: -14px;
+    position: relative;
+    width: 100%;
+    height: auto;
+
+   
+  }
+  .forget-pw-card h1 {
+    font-size: 3rem;
+    top: 4rem;
+    padding-bottom: 4rem;
+  }
+  .forget-pw-card button {
+    background: #fff;
+    color: #000;
+    width: 18rem;
+    height: 6rem;
+    padding: 2rem;
+    font-size: 2rem;
+    margin: 1rem;
+  }
+  .forget-pw-card p {
+    width: 90%;
+    font-weight: 400;
+    color: #ff0028;
+    position: relative;
+    top: 2rem;
+    font-size: 1.3rem;
+  }
+  .forget-pw-card h6 {
+    font-size: 2.5rem;
+    text-align: center;
+    top: 3rem;
+    width: 100%;
+  }
+  .forget-pw-card h2 {
+    font-size: 5.5rem;
+  }
+  .forget-pw-card .bt-fp {
+    position: absolute;
+    /* bottom: 25rem; */
+    width: 90%;
+    top: 83%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .success {
+    height: 20rem;
+    top: 1rem;
+  }
+  .forget-pw-card .btnLogin {
+    width: 80%;
+    font-size: 2.2rem;
+    height: 7rem;
   }
   .login .flex-display-login .item-two-login form h3 {
     font-size: 1.5rem;
-    top: -5rem;
+    top: -3rem;
     height: 5.5rem;
+    width: 90%;
+  }
+  .login .flex-display-login .item-two-login .dontHaveAnAccount .signup-btn {
+    top: 42rem;
+    width: 70%;
+    padding: 2.6rem;
+    font-size: 1.7rem;
   }
   .homeContainer .intro h1 {
     width: 100%;
     text-align: center;
+    font-size: 3rem;
   }
-  .home{
+  .home {
     padding: 1rem;
   }
   .homeContainer .intro h3 {
     width: 90%;
+  }
+  .homeContainer .headerContainer{
+    background: #031522;
+    position: fixed;
+    width: 100%;
+    height: 12%;
+    padding: 1rem 2rem;
+    /* position: relative; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
   }
   .grid-display-notes {
     grid-template-columns: repeat(1, 1fr);
@@ -214,29 +356,30 @@ header nav .theme h1 {
     margin-bottom: 5rem;
   }
   header nav .profile .avatar {
-    height: 11rem;
-    width: 11rem;
+    height: 9rem;
+    width: 9rem;
   }
   .header h1 {
     display: none;
   }
   .addmore {
-    font-size: 3rem;
+    font-size: 2.3rem;
     margin-top: 4rem;
   }
-  .homeContainer .overview .grid-overview-section .totalnotes .addMore button, .totalPhotos .addMore button {
-    font-size: 4rem; 
-}
+  .homeContainer .overview .grid-overview-section .totalnotes .addMore button,
+  .totalPhotos .addMore button {
+    font-size: 3.5rem;
+  }
   .notesTwo .cards p {
     font-size: 1.9rem;
   }
   .title h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
   }
   .header img {
     margin-top: 4rem;
-    height: 6rem;
+    height: 5rem;
   }
   .addnoteContainer .addnoteonclick {
     width: 90%;
@@ -265,37 +408,47 @@ header nav .theme h1 {
   header nav ul li a {
     width: 90%;
     justify-content: left;
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
+  header {
+    height: 100vh;
+}
   header nav ul li a:hover {
     height: 8rem;
     width: 100%;
     padding-left: 3rem;
   }
   header nav ul li {
-    margin: 3rem;
+    margin: 0;
+    height: 20%;
   }
   .profileContainer .profilePicGrid {
     grid-template-columns: repeat(2, 1fr);
   }
   header nav .profile {
     padding: 1rem;
-    height: 15rem;
+    height: 15%;
+    position: relative;
+    top: 0;
+    width: 100%;
   }
   header nav .menu {
     display: none;
   }
   header nav .theme {
-    top: 80rem;
-    width: 88%;
-    height: 8rem;
+    position: relative;
+    width: 95%;
+    height: 9%;
+    left: 0;
+    top: 0;
+    transform: none;
   }
   .editNote .editNoteCard {
     width: 95%;
   }
   .editNote .editNoteCard h1,
   span {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   .editNote .editNoteCard form label {
     font-size: 3rem;
@@ -319,10 +472,10 @@ header nav .theme h1 {
     justify-content: center;
     align-items: center;
   }
-  .editNote .editNoteCard form button:hover{
+  .editNote .editNoteCard form button:hover {
     background-color: var(--color);
     color: #000;
-    border: .1rem solid var(--color);
+    border: 0.1rem solid var(--color);
   }
   .fileUploadData {
     height: 16rem;
@@ -333,83 +486,117 @@ header nav .theme h1 {
   .fileUploadData button {
     background-color: #9562ff;
     border: none;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     bottom: 1rem;
     cursor: pointer;
     padding: 1.5rem;
     position: absolute;
-    transition: .2s ease;
+    transition: 0.2s ease;
     width: 92%;
-}
+  }
   .closephotomenu {
     font-size: 3rem;
   }
   .homeContainer {
     margin-left: 0;
     width: 100%;
+    height: 86%;
+    top: 5.5%;
+    overflow-y: scroll;
   }
   .homeContainer .overview {
     width: 99%;
-    height: 35rem;
+    height: 45%;
+    overflow: hidden;
   }
   .homeContainer .overview .grid-overview-section {
     flex-direction: column;
     width: 100%;
     margin-top: 1rem;
+    height: 90%;
   }
   .homeContainer .overview .grid-overview-section .totalnotes,
   .totalPhotos {
     width: 100%;
-    /* height: 100%; */
+   height: 45%;
   }
   .homeContainer .recentActivities {
-    margin-top: 0;
-    height: 35rem;
+    margin-top: 1rem;
+    height: 30%;
     width: 99%;
   }
   .homeContainer .recentActivities .activities {
-    height: 80%;
-    margin-top: 2rem;
-    
+    height: 60%;
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
-  .homeContainer .recentActivities .activities p{
+  .homeContainer .recentActivities .activities p {
     font-size: 2rem;
     margin: 1rem 0 0 0;
   }
   .homeContainer .recentActivities .activities p span {
     font-size: 1.5rem;
-}
-  .homeContainer .intro {
-    margin-top: 2rem;
-    width: 99%;
-    height: 18rem;
-    /* background: rebeccapurple; */
-    border-bottom: .1rem solid rgba(255,255,255,0.3);
   }
-  .cssbuttons-io-button{
+  .homeContainer .intro {
+    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.3);
+
+    margin-top: 0;
+    width: 99%;
+    height: 15%;
+    /* margin-bottom: 1rem; */
+    padding-bottom: 3rem;
+  }
+  .cssbuttons-io-button {
     margin-top: 2rem;
   }
   header nav ul {
     width: 100%;
-    height: 50%;
+    height: 56%;
     position: relative;
-    top: 6rem;
+    top: 0;
+    margin: 2rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     list-style: none;
-}
-.homeContainer h5 {
-  font-size: 3rem;
-}
-.addnoteContainer .addnoteonclick form button:hover {
-  background-color: var(--color);
-  border: 0.1rem solid var(--color);
-  color: #000;
-}
-.homeContainer .overview .grid-overview-section .totalnotes .totalNotes h4, .totalPhotos h4 {
+  }
+  .homeContainer h5 {
     font-size: 2rem;
+  }
+  .addnoteContainer .addnoteonclick form button:hover {
+    background-color: var(--color);
+    border: 0.1rem solid var(--color);
+    color: #000;
+  }
+  .homeContainer .overview .grid-overview-section .totalnotes .totalNotes h4,
+  .totalPhotos h4 {
+    font-size: 2rem;
+  }
+  .homeContainer .overview .grid-overview-section .totalnotes .totalNotes p, .totalPhotos p {
+    font-size: 2.5rem;
+    opacity: 0.8;
+}
+.DeleteAccount .deleteAccCard {
+  height: 51%;
+  width: 98%;
+}
+.DeleteAccount .deleteAccCard p span{
+  font-size: 1.8rem;
+
+}
+.DeleteAccount .deleteAccCard h3{
+  padding: 1rem 0 1rem 2rem;
+}
+.DeleteAccount .deleteAccCard h6 {
+  position: absolute;
+  top: 24rem;
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+.DeleteAccount .deleteAccCard input{
+  top: -1rem;
 }
 }
 /* @media screen and (max-width: 480px) {
